@@ -100,6 +100,10 @@
       <artifactId>netty-buffer</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.net5.incubator</groupId>
+      <artifactId>netty-incubator-buffer-memseg</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
     </dependency>
@@ -167,6 +171,11 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.lmax</groupId>
+      <artifactId>disruptor</artifactId>
+      <version>3.3.4</version>
     </dependency>
     <dependency>
       <groupId>org.rocksdb</groupId>
@@ -267,6 +276,11 @@
         <version>5.0.0.Final-SNAPSHOT</version>
       </dependency>
       <dependency>
+        <groupId>io.net5.incubator</groupId>
+        <artifactId>netty-incubator-buffer-memseg</artifactId>
+        <version>0.0.1.Final-SNAPSHOT</version>
+      </dependency>
+      <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>2.3.1</version>
@@ -342,6 +356,11 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>2.14.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.lmax</groupId>
+        <artifactId>disruptor</artifactId>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.rocksdb</groupId>
@@ -484,7 +503,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>16</release>
+          <release>17</release>
           <annotationProcessorPaths>
             <annotationProcessorPath>
               <groupId>io.soabase.record-builder</groupId>
@@ -499,8 +518,8 @@
           <compilerArgs>--enable-preview
             <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
           </compilerArgs>
-          <source>16</source>
-          <target>16</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
@@ -533,7 +552,7 @@
           </dependency>
         </dependencies>
         <configuration>
-          <argLine>--enable-preview --add-modules jdk.incubator.foreign -Dforeign.restricted=permit --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+          <argLine>--enable-preview --add-modules jdk.incubator.foreign -Dforeign.restricted=permit --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --enable-native-access=ALL-UNNAMED</argLine>
           <systemProperties>
             <property>
               <name>ci</name>
